force-app/main/default/objects/KDCE_OrderLineItem__c/KDCE_OrderLineItem__c.object-meta.xml
<CustomObject>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OLI-{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>