force-app/main/default/objects/KDCE_OrderLineItem__c/fields/CollectionStatus__c.field-meta.xml
<CustomField>
    <fullName>CollectionStatus__c</fullName>
    <description>Order Collection Status</description>
    <label>Collection Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>collection_success</fullName>
            </value>
            <value>
                <fullName>external_success</fullName>
            </value>
            <value>
                <fullName>collection</fullName>
            </value>
            <value>
                <fullName>collection_failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>