force-app/main/default/objects/KDCE_OrderLineItem__c/fields/EANCode__c.field-meta.xml
<CustomField>
    <fullName>EANCode__c</fullName>
    <label>EAN Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>