force-app/main/default/objects/KDCE_OrderLineItem__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <description>[KDCE] Magento PK
Mapping Column : entity_id</description>
    <externalId>true</externalId>
    <inlineHelpText>Magento PK</inlineHelpText>
    <label>Entity Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>