force-app/main/default/objects/KDCE_OrderLineItem__c/fields/fm_OrderType__c.field-meta.xml
<CustomField>
    <fullName>fm_OrderType__c</fullName>
    <formula>TEXT(Order__r.OrderType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>