force-app/main/default/objects/KDCE_OrderLineItem__c/fields/fm_ProductName__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductName__c</fullName>
    <formula>/*Product__r.KDEC_POS_ProductName__c*/
/* Product__r.KDCE_MG_ProductName_ko__c*/
	
IF(
	TEXT(Order__r.ActionChannel__c) = &apos;POS&apos;,
	Product__r.KDEC_POS_ProductName__c,
	Product__r.KDCE_MG_ProductName_ko__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>