force-app/main/default/objects/KDCE_OrderLineItem__c/fields/fm_ProductVersion__c.field-meta.xml
<CustomField>
    <fullName>fm_ProductVersion__c</fullName>
    <formula>Product__r.CCR_Version__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Version</label>
    <type>Text</type>
</CustomField>