force-app/main/default/objects/KDCE_OrderLineItem__c/fields/IsAccessory__c.field-meta.xml
<CustomField>
    <fullName>IsAccessory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Is Accessory?</description>
    <label>Accessory YN</label>
    <type>Checkbox</type>
</CustomField>