force-app/main/default/objects/KDCE_OrderLineItem__c/fields/IsDevice__c.field-meta.xml
<CustomField>
    <fullName>IsDevice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDevice</label>
    <type>Checkbox</type>
</CustomField>