force-app/main/default/objects/KDCE_OrderLineItem__c/fields/IsLinkedItem__c.field-meta.xml
<CustomField>
    <fullName>IsLinkedItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asset History가 생성된 경우, true가 됨. APEX에서 Asset History 중복 생성 방지를 위해 사용.</description>
    <label>Linked Item</label>
    <type>Checkbox</type>
</CustomField>