force-app/main/default/objects/KDCE_OrderLineItem__c/fields/KDCE_fm_OrderContactId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_OrderContactId__c</fullName>
    <formula>CASESAFEID(Order__r.Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Id</label>
    <type>Text</type>
</CustomField>