force-app/main/default/objects/KDCE_OrderLineItem__c/fields/KDCE_fm_OrderDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_OrderDate__c</fullName>
    <formula>Order__r.OrderDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>