force-app/main/default/objects/KDCE_OrderLineItem__c/fields/KDCE_fm_OrderShipingStart__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_OrderShipingStart__c</fullName>
    <formula>Order__r.ShippingStartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KDCE_fm_OrderShipingStart</label>
    <type>Date</type>
</CustomField>