force-app/main/default/objects/KDCE_OrderLineItem__c/fields/KDCE_fm_OriginalOrder__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_OriginalOrder__c</fullName>
    <formula>Order__r.OriginOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Order Id</label>
    <type>Text</type>
</CustomField>