force-app/main/default/objects/KDCE_OrderLineItem__c/fields/KDCE_fm_QureCaseId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_QureCaseId__c</fullName>
    <formula>Order__r.QureCase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QureCase</label>
    <type>Text</type>
</CustomField>