force-app/main/default/objects/KDCE_OrderLineItem__c/fields/PriceAfterRental__c.field-meta.xml
<CustomField>
    <fullName>PriceAfterRental__c</fullName>
    <description>[KDCE] 렌탈후인수가격 (price after rental)</description>
    <label>Price After Rental</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>