force-app/main/default/objects/KDCE_OrderLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Product</description>
    <inlineHelpText>Related Product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>OrderLineItems</relationshipLabel>
    <relationshipName>OrderLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>