force-app/main/default/objects/KDCE_OrderLineItem__c/fields/ProductNetPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductNetPrice__c</fullName>
    <description>[KDCE] 고객결제금액(VAT포함, 할인후)(배송비제외)
Mapping Column : product_net_price</description>
    <inlineHelpText>고객결제금액(VAT포함, 할인후)(배송비제외)</inlineHelpText>
    <label>Product Net Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>