force-app/main/default/objects/KDCE_OrderLineItem__c/fields/ProductSupplyPrice__c.field-meta.xml
<CustomField>
    <fullName>ProductSupplyPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>공급가액</inlineHelpText>
    <label>Product Supply Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>