force-app/main/default/objects/KDCE_OrderLineItem__c/fields/ProductTax__c.field-meta.xml
<CustomField>
    <fullName>ProductTax__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[KDCE] VAT 금액</description>
    <label>Product Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>