force-app/main/default/objects/KDCE_OrderLineItem__c/fields/ProductTaxBasis__c.field-meta.xml
<CustomField>
    <fullName>ProductTaxBasis__c</fullName>
    <description>[KDCE] 세액 기준
Mapping Column : product_tax_basis</description>
    <inlineHelpText>세액 기준</inlineHelpText>
    <label>Product Tax Basis</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>