force-app/main/default/objects/KDCE_OrderLineItem__c/fields/ProductTaxRate__c.field-meta.xml
<CustomField>
    <fullName>ProductTaxRate__c</fullName>
    <description>[KDCE] VAT세율
Mapping Column : product_tax_rate</description>
    <inlineHelpText>product_tax_basis</inlineHelpText>
    <label>Product Tax Rate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>